[package]
name = "ls_willette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = 3
debug = false
