[package]
name = "ls_willette"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = {version="4.0.32", features=["derive"]}
log = "0.4"
once_cell = { version = "1.17.0", optional = true }
string-builder = "0.2.0"
terminal_size = "0.2.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = 3
debug = false
